refactor/add other controlers
